email templates n details implemented
